cabal-version:       >=1.10

name:                NaomiHeaderParser
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Bradon Kanyid
maintainer:          bkanyid@pdx.edu
-- copyright:
-- category:
build-type:          Simple
extra-source-files:
  CHANGELOG.md
  .gitignore

library
  build-depends:
    base >=4.14 && <4.15,
    bytestring,
    text,
    attoparsec,
    cereal

  default-language:
    Haskell2010

  exposed-modules:
    NaomiHeaderParser

  ghc-options:
    -Wall -fwarn-tabs

  hs-source-dirs:
    src

-- Test
test-suite test
  type:    exitcode-stdio-1.0
  main-is: test.hs

  build-depends:
    base                 >= 4.14      && < 4.15,
    attoparsec           >= 0.10.2,
    bytestring           >= 0.9,
    zlib                 >= 0.5,
    NaomiHeaderParser

  ghc-options:
    -Wall -Werror

  hs-source-dirs:
    test
